@@ -23,7 +23,7 @@
  *
  * @author Rafal Mantiuk, <mantiuk@mpi-inf.mpg.de>
  *
- * $Id: otf.cpp,v 1.6 2008/09/11 22:20:13 rafm Exp $
+ * $Id: otf.cpp,v 1.7 2008/10/02 17:02:20 rafm Exp $
  */
 
 #include <iostream>
@@ -67,7 +67,7 @@ void multiplyAndAddArray(pfs::Array2D *z, const pfs::Array2D *x, const float f);
  */
 float getPupilDiameter( float Y )
 {
-  return (4.9 - 3 * tanhf( 0.4 * (log10f( Y * M_PI ) - 0.5) ))*1e-3;
+  return (4.9 - 3 * tanhf( 0.4 * (log10f( Y ) + 1) ))*1e-3;
 }
 
 
